# rvw

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  INDEX.md  LICENSE  README.md
.claude/: settings.json
.github/workflows/: ci.yml
src/: app.rs  editor.rs  git.rs  input.rs  languages.rs  main.rs  review.rs  ui.rs
src/lsp/: diff.rs  mod.rs
