[package]
name = "rvw"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Terminal code review tool — review git branches in your editor with full LSP support"
repository = "https://github.com/sysheap/rvw"
homepage = "https://github.com/sysheap/rvw"
readme = "README.md"
keywords = ["code-review", "tui", "git", "lsp", "helix"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".indxr-cache/", "CLAUDE.md", "INDEX.md", ".github/", ".claude/", ".mcp.json", "assets/"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
sha2 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
ctrlc = "3"
